assets/css/style.css
/* Stylesheet setup for the news-grid project */
:root {
    --primary-color: #c72727;
    --secondary-color: #f99500;
    --light-color: #f3f3f3;
    --dark-color: #333;
    --max-width: 1100px;
}

.category {
    --sport-color: #f99500;
    --ent-color: #a66bbe;
    --tech-color: #009cff;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Lato', sans-serif;
    line-height: 1.5;
    background: var(--light-color);
}

a {
    color: #333;
    text-decoration: none;
}

ul {
    list-style: none;
}

img {
    width: 100%;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Staatliches', cursive;
    margin: .55rem;
    line-height: 1.3;
}
/*-------------------------------*/


/*Utility Styling*/
.container {
    max-width: var(--max-width);
    margin: auto;
    padding: 0 2rem;
    overflow: hidden;
}

.category {
    display: inline-block;
    color: #fff;
    font-size: 0.55rem;
    text-transform: uppercase;
    padding: 0.4rem 0.6rem;
    border-radius: 15px;
    margin-bottom: 0.5rem;
}

.category-sports {
    background: var(--sport-color);
}

.category-ent {
    background: var(--ent-color);
}

.category-tech {
    background: var(--tech-color);
}
.btn {
    display: inline-block;
    border: none;
    background: var(--dark-color);
    color: #fff;
    padding: 0.5rem 1.5rem;
}

.btn-light {
    background: var(--light-color);
}

.btn-primary {
    background: var(--primary-color);
}

.btn-secondary {
    background: var(--secondary-color);
}

.btn:hover {
    opacity: 0.9;
}

.btn-block {
    display: block;
    width: 100%;
    text-align: center;
}

.card {
    background: #fff;
    padding: 1rem;
}

.bg-dark {
    background: var(--dark-color);
    color: #fff;
}

.bg-primary {
    background: var(--primary-color);
    color: #fff;
}

.bg-light {
    backgorund: var(--secondary-color);
    color: #fff;
}

.bg-dark h1,
.bg-dark h2,
.bg-dark h3,
.bg-dark a,
.bg-primary h1,
.bg-primary h2,
.bg-primary h3,
.bg-primary a,
.bg-secondary h1,
.bg-secondary h2,
.bg-secondary h3,
.bg-secondary a {
    color: #fff;
}


.py-1 { padding: 1.5rem 0; }
.py-2 { padding: 2.5rem 0; }
.py-3 { padding: 3.5rem 0; }

.p-1 { padding: 1.5rem 0; }
.p-2 { padding: 2.5rem 0; }
.p-3 { padding: 3.5rem 0; }
/*---------------------------------*/


/*Navigation Styling*/
#main-nav {
    background: #fff;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 2;
}

#main-nav .container {
    display: grid;
    grid-template-columns: 6fr 3fr 2fr;
    padding: 1rem;
    -webkit-box-align: center;
            align-items: center;
}

#main-nav .logo {
    width: 180px;
}

#main-nav ul {
    justify-self: end;
    display: -webkit-box;
    display: flex;
}

#main-nav ul li a {
    padding: 0.75rem;
    font-weight: bold;
}

#main-nav ul li a.current {
    background: var(--primary-color);
    color: #fff;
}

#main-nav ul li a:hover {
    background: var(--light-color);
    color: var(--dark-color);
}

#main-nav .social {
    justify-self: center;
}

#main-nav .social i {
    color: #777;
    margin-right: .5rem;
}
/*--------------------------------*/


/*Showcase Styling*/
#showcase {
    color: #fff;
    background: #333;
    padding: 2rem;
    position: relative;
}

#showcase:before {
    content: '';
    background: url('../images/featured.jpg') no-repeat center center/cover;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.4;
}

#showcase .showcase-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    -webkit-box-pack: center;
            justify-content: center;
    -webkit-box-align: center;
            align-items: center;
    height: 50vh;
}

#showcase .showcase-content {
    z-index: 1;
}

#showcase .showcase-content p {
    margin-bottom: 1rem;
}
/*--------------------------------*/

/* Home Articles */
#home-articles .articles-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1rem;
}

#home-articles .articles-container > *:first-child,
#home-articles .articles-container > *:last-child {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1rem;
    -webkit-box-align: center;
            align-items: center;
    grid-column: 1 / span 2;
}

#home-articles .articles-container > *:last-child {
    grid-column: 2 / span 2;
}
/*----------------------------------*/

/* footer */
#main-footer {
    background: var(--dark-color);
    color: #fff;
}

#main-footer img {
    width: 150px;
}

#main-footer a {
    color: #fff;
}

#main-footer .footer-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 1.5rem;
}

#main-footer .footer-container > *:last-child {
    background: #444;
    grid-column: 1 / span 4;
    padding: .5rem;
    text-align: center;
    font-size: 0.75rem;
}

#main-footer .footer-container input[type='email'] {
    width: 90%;
    padding: 0.5rem;
    margin-bottom: 0.5rem;
    
}

